--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="interface">
     <header>
       <ul class="menu-principal">
-        <a href="pages/fabricacao.html"><li class="border-left">FABRICAÇÃO</li></a>
+        <a href="PAGES/fabricacao.html"><li class="border-left">FABRICAÇÃO</li></a>
         <a href="#"><li class="border-left">COMÉRCIO</li></a>
           <a href="#"><li class="border-left">SHOP</li></a>
         <a href="pages/contato.html"><li class="border-left">CONTATO</li></a>
@@ -22,7 +22,7 @@
       <div class="banner">
         <h1>Aprecie e Conheça...</h1>
         <p>Para saber mais</p>
-        <a href="pages/fabricacao.html" class="botao">Clique aqui</a>
+        <a href="PAGES/fabricacao.html" class="botao">Clique aqui</a>
       </div>
     </header>
 
