--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="PAGES/fabricacao.html"><li class="border-left">FABRICAÇÃO</li></a>
         <a href="#"><li class="border-left">COMÉRCIO</li></a>
           <a href="#"><li class="border-left">SHOP</li></a>
-        <a href="pages/contato.html"><li class="border-left">CONTATO</li></a>
+        <a href="PAGES/contato.html"><li class="border-left">CONTATO</li></a>
       </ul>
       <div class="banner">
         <h1>Aprecie e Conheça...</h1>
