--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="banner">
         <h1>Aprecie e Conheça...</h1>
         <p>Para saber mais</p>
-        <a href="PAGES/fabricacao.html" class="botao">Clique aqui</a>
+        <a href="PAGES/fabricacao.html"><li class="botao">Clique aqui</li></a>
       </div>
     </header>
 
